# tennis-ai

./: .dockerignore  .gitattributes  .gitignore  .lfsconfig  LICENSE  README.md  docker-compose.yml  pyproject.toml
analysis/: epa.ipynb  epa_2024.ipynb  epa_training.ipynb
backend/: Dockerfile  api.py  backend_utils.py  storage.py
data/: atp_matches_1968.csv  atp_matches_1969.csv  atp_matches_1970.csv  atp_matches_1971.csv  atp_matches_1972.csv  atp_matches_1973.csv  atp_matches_1974.csv  atp_matches_1975.csv  atp_matches_1976.csv  atp_matches_1977.csv  atp_matches_1978.csv  atp_matches_1979.csv  atp_matches_1980.csv  atp_matches_1981.csv  atp_matches_1982.csv  atp_matches_1983.csv  atp_matches_1984.csv  atp_matches_1985.csv  atp_matches_1986.csv  atp_matches_1987.csv  atp_matches_1988.csv  atp_matches_1989.csv  atp_matches_1990.csv  atp_matches_1991.csv  atp_matches_1992.csv  atp_matches_1993.csv  atp_matches_1994.csv  atp_matches_1995.csv  atp_matches_1996.csv  atp_matches_1997.csv  atp_matches_1998.csv  atp_matches_1999.csv  atp_matches_2000.csv  atp_matches_2001.csv  atp_matches_2002.csv  atp_matches_2007.csv  atp_matches_2008.csv  atp_matches_2009.csv  atp_matches_2011.csv  atp_matches_2012.csv  (+17 more)
data_processing/: attach_data.py  catboost.py  clean.py  data_preprocessing.py  feature_engineering.py  random_forest.py  xgboost.py
models/: catboost_model.cbm  random_forest.joblib  xgboost.json
training/: catboost.ipynb  random_forest.ipynb  random_forest.py  xgboost.ipynb
ui-app/: Dockerfile  package-lock.json  package.json
utils/: dataframe.py  dataset.py  (+2 more)
(+18 files in other folders)
